<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@android:color/transparent"
              android:orientation="vertical">


    <TextView
        android:id="@+id/photograph_option1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/dialogbg_bottom_divider_cornertop"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/take_photo"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/images_option2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/pick_from_gallery"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/divider_color"/>

    <TextView
        android:id="@+id/search_gif_online"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/dialogbg_bottom_divider_cornerbottom"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/search_gifs_online"
        android:textSize="16sp"/>


    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/dialogbg_corner"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/cancel"
        android:textSize="16sp"/>

</LinearLayout>