<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.UserInfoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <TextView
            android:id="@+id/tv_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_back"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:text="@string/my_sentre"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/my_sentre_save"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/my_centre_avatar"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="18sp"/>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <!-- <pl.droidsonroids.gif.GifImageView
                         android:layout_width="72dp"
                         android:layout_height="72dp"
                         android:background="@mipmap/ic_launcher"
                         android:scaleType="fitXY"
                         android:src="@drawable/cat"
                         android:visibility="gone"/>-->

                    <com.sibozn.gochat.widget.FilterImageView
                        android:id="@+id/head_portrait1"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:elevation="4dp"
                        android:scaleType="fitXY"
                        android:src="@mipmap/ic_launcher"
                        />

                    <com.sibozn.gochat.widget.RoundImageView
                        android:id="@+id/head_portrait"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:scaleType="fitXY"
                        android:src="@mipmap/ic_launcher"
                        android:visibility="gone"
                        />

                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/my_center_nickname"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/et_nickname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@null"
                    android:hint="@string/my_centre_nickname"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/my_centre_age"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/et_age"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@null"
                    android:hint="@string/my_centre_age_hint"
                    android:inputType="number"
                    android:maxLength="2"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/my_centre_gender"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="18sp"/>

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_nan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="@string/my_centre_male"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="16sp"/>

                    <RadioButton
                        android:id="@+id/rb_nv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/my_centre_female"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="16sp"/>
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/bt_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/selector_login_out"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/my_centre_logout"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="visible"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>